# agent-runtime-poc

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
agent_worker/: dispatcher.py  main.py  registry.py
agent_worker/handlers/: __init__.py  accident_info_extraction.py  base.py  data_processing.py  document_classification.py  identity_verification.py  image_data_extraction.py  image_download.py  prior_claims_matching.py  route_to_human.py
agent_worker/universal/: __init__.py  handler.py  langgraph_agent.py  tools.py
biz_workflows/: claim_adjudication_v1.yaml  claim_basic_adjudication_v1.yaml  poc_doc_generation_v1.yaml  poc_doc_generation_v2.yaml  poc_doc_generation_v3.yaml  poc_doc_generation_v4.yaml
components/: config.yaml  pubsub.yaml  statestore.yaml
dapr_workflow/: activities.py  main.py  result_bridge.py  workflows.py
orchestrator/: dapr_client.py  engine.py  instance.py  main.py  payload_builder.py
scripts/: init_db.py  migrate_db_schema.py  migrate_yaml_to_db.py
shared/: db.py  models.py  orm_models.py  step_utils.py  workflow_loader.py  workflow_repository.py
templates/: base.html  index.html  instance_detail.html  instance_output.html  instance_progress.html  instances.html  run.html  workflow_ai_create.html  workflow_detail.html  workflow_edit.html  workflows.html
tests/: test_e2e.py  test_engine.py  test_loader.py  test_worker.py  test_workflow_designer.py
