[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-platform-poc"
version = "0.1.0"
description = "Agent Platform POC: Orchestrator → Dapr Workflow → Pub/Sub → Worker Agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "dapr-ext-workflow>=1.14.0",
    "langgraph>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.0",
    "tavily-python>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
